add new columns and start to check total itens before insert
