# src/controllers/message.ts
@@ -1,4 +1,4 @@
-import { Authorized, CurrentUser, Get, JsonController } from "routing-controllers";
+import { Authorized, CurrentUser, Get, JsonController, Post } from "routing-controllers";
 import { OpenAPI } from "routing-controllers-openapi";
 import { injectable } from 'tsyringe'
 
@@ -7,13 +7,15 @@ import UserEntity from "../domain/entities/user.entity";
 import { ValidatePermissionProvider } from "../domain/providers/validate-permission-provider";
 import { StrictQueryParams } from "../external/web/validator";
 import { LisMessageUseCase } from "../application/use-case/message/list-message-use-case";
+import { SendMessageUseCase } from "../application/use-case/message/send-message-use-case";
 
 @JsonController('/message')
 @injectable()
 export class  UserController {
     constructor(
         private readonly lisMessageUseCase: LisMessageUseCase,
-        private readonly validatePermissionProvider : ValidatePermissionProvider
+        private readonly validatePermissionProvider : ValidatePermissionProvider,
+        private readonly sendMessageUseCase: SendMessageUseCase,
     ) { }
 
     @OpenAPI({
@@ -25,5 +27,12 @@ export class  UserController {
     list(@StrictQueryParams() pagination: PaginationSchema, @CurrentUser() user: UserEntity) {
         this.validatePermissionProvider.isAdmin(user)
         return this.lisMessageUseCase.execute({ filters: { companyId: user.companyId }, pagination })
+    }
+
+
+    @Post('/send')
+    @Authorized()
+    async send(@CurrentUser() user: UserEntity) {
+     return this.sendMessageUseCase.execute({ data: { companyId: user.companyId }, user })
     }
 }
